# payment-processing-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.githooks/: pre-commit  pre-push
docs/: README_ru.md
src/: config.py  utils.py
src/api/: dependencies.py
src/api/v1/: router.py  schemas.py
src/api/v1/endpoints/: payments.py
src/core/: utils.py
src/core/entities/: payment.py
src/core/interfaces/: message_broker.py  payments.py
src/core/use_cases/: payments.py
src/infrastructure/: logger.py
src/infrastructure/broker/: consumer.py  faststream_broker.py  rabbit.py
src/infrastructure/database/: connection.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 7a9ee73a6c11_initial_migration.py
src/infrastructure/database/models/: __init__.py  base.py  outbox.py  payment.py
src/infrastructure/database/repositories/: payments.py
src/infrastructure/webhook/: client.py
src/infrastructure/workers/: outbox_processor.py  run_outbox.py
tests/: conftest.py
tests/integration/: test_api.py
